Fix number widening in openAPI spec
